syntax = "proto3";

option csharp_namespace = "DistributedChat";
package DistributedChat;

service ChatService {
  rpc Chat (ChatRequest) returns (stream ChatResponse);
}

message Turn {
  string role = 1;
  string msg = 2;
}

message ChatRequest {
  repeated Turn turns = 1;
  int32 minCharsToStream = 2;
}

message Citation {
  string ref = 1;
  string title = 2;
  string uri = 3;
}

message ChatResponse {
  string status = 1;
  string msg = 2;
  repeated Citation citations = 3;
}